## PLANNED FOR 1.3 / 1.4

* Primordial BEACH?
* Primordial Ocean land vegetation
* Portal mechanics?
* GLARE improvements
* Copperbug improvements
* Big Beak new textures?
* New structure?


> Fix Vines not being pick blockable
> Fix Huge Underhang trees generating without leaves on occasion?



## **Updates in 1.3**

### Greetings all! It's been a while since the last -major- update, so do we have some changes in store!
### We have changed how the Bygone generates as whole entirely, reworked the Amber Desert biome, revamped the Ancient Hook, added a new mob and so much more!
### PLEASE keep in mind you WILL have to delete your /bygone/ dimension folder before updating! Some of the changes will have made things unstable in older worlds!
### Please join us in the official [Discord](https://discord.gg/DMW28XH235)!

# New features in 1.3:
* Completely overhauled the Bygones world generation! (See below for more details!)
* Overhauled the look of the Amber Desert biome.
* Overhauled the Ancient Hook.
* Added the Whiskbill and Whiskbill Spawn Egg.
* Added the Amber Sand, Amber Sandstone, Cut Amber Sandstone, Smooth Amber Sandstone and Chiseled Amber Sandstone blocksets.
* Added the Amber Clump.
* Added the Primordial Beach biome.
* Added the [REDACTED] block, found only in Abandoned Farms.
* Added Glow Gourd Seeds. (Currently only place the "grown" version of the Gourd!)
* Added two new paintings from ["Iri_Dark!"](https://bsky.app/profile/iridark.bsky.social)

# Terrain Generation changes and additions:
* Added the "Primordial Beach" biome
* Added noise Pillars to the terrain
* New cave generation
* Redistributed biomes (Beaches will generate next to Oceans, Amber Deserts are less common, and  Primordial Oceans are smaller)
* Made the overall terrain more traversable by flattening it!

# Amber Desert changes and additions:
* Is now made up of Amber Sand and Amber Sandstone.
* Increased amount of Amber "boulders" in the biome.