@@ -3,7 +3,7 @@
   "placement": [
     {
       "type": "minecraft:count",
-      "count": 48
+      "count": 64
     },
     {
       "type": "minecraft:in_square"
