@@ -3,7 +3,7 @@
   "placement": [
     {
       "type": "minecraft:count",
-      "count": 90
+      "count": 95
     },
     {
       "type": "minecraft:in_square"
