@@ -1,9 +1,6 @@
 {
   "replace": false,
   "values": [
-    "bygone:byslate",
-    "bygone:byslate_iron_ore",
-    "bygone:byslate_copper_ore",
-    "bygone:byslate_coal_ore"
+
   ]
 }
