@@ -3,6 +3,9 @@
   "values": [
     "bygone:bystone_iron_ore",
     "bygone:bystone_copper_ore",
-    "bygone:oceanstone"
+    "bygone:oceanstone",
+    "bygone:byslate",
+    "bygone:byslate_iron_ore",
+    "bygone:byslate_copper_ore"
   ]
 }
